--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
  * Configurations
  */
 group = "edu.lehigh.swat.bench.uba"
-version = "1.7.0"
+version = "1.7.1-pr.0"
 description = "Univ-Bench Artificial Data Generator (UBA) for the Lehigh University Benchmark (LUBM)"
 mainClassName = "edu.lehigh.swat.bench.uba.Generator"
 
